[FrameworkBundle] Fix alignment of <li> with the selected class and small opera glitch

--- a/src/Symfony/Bundle/FrameworkBundle/Resources/public/css/exception.css
+++ b/src/Symfony/Bundle/FrameworkBundle/Resources/public/css/exception.css
@@ -86,9 +86,14 @@ build: 56
 {
     font-size:12px;
     color:#868686;
-    padding-bottom:10px;
+    padding: 5px 4px;
     list-style-type:decimal;
-    margin-left:24px;
+    margin-left:20px;
+}
+
+/* fix for Opera not liking empty <li> */
+.sf-exceptionreset .traces li:after {
+    content: '\00A0'
 }
 
 .sf-exceptionreset #logs .traces em
@@ -259,5 +264,4 @@ build: 56
 .sf-exceptionreset li .selected
 {
     background-color: #ffd;
-    padding: 4px 3px
 }
